--- a/src/pages/Earrings/EarringsPage.module.css
+++ b/src/pages/Earrings/EarringsPage.module.css
@@ -55,6 +55,7 @@
 
 .cardBody {
   padding: 10px;
+  color: #111;
 }
 
 .cardTitle {
